--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "simplepie/simplepie": "~1.3"
     },
     "require-dev": {
+        "chameleon-system/code-style-config": "dev-master@dev",
         "phpunit/dbunit": "~2.0",
         "phpunit/phpunit": "~5.0"
     },
