--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         "screenshotfolder_id": ""
     },
     "require": {
-        "chameleon-system/chameleon-base": "dev-master",
+        "chameleon-system/chameleon-base": "~6.3.0",
         "simplepie/simplepie": "~1.3"
     },
     "require-dev": {
         "chameleon-system/code-style-config": "dev-master@dev",
-        "chameleon-system/sanitycheck": "dev-master",
-        "chameleon-system/sanitycheck-bundle": "dev-master",
+        "chameleon-system/sanitycheck": "~6.3.0",
+        "chameleon-system/sanitycheck-bundle": "~6.3.0",
         "phpunit/dbunit": "~2.0",
         "phpunit/phpunit": "~5.7"
     },
