--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "screenshotfolder_id": ""
     },
     "require": {
-        "chameleon-system/chameleon-base": "dev-master",
+        "chameleon-system/chameleon-base": "dev-symfony44-upgrade",
         "simplepie/simplepie": "~1.3"
     },
     "require-dev": {
