--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,8 @@
         "chameleon-system/code-style-config": "dev-master@dev",
         "chameleon-system/sanitycheck": "~7.1.0",
         "chameleon-system/sanitycheck-bundle": "~7.1.0",
-        "phpunit/dbunit": "~2.0",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/dbunit": "^3.0",
+        "phpunit/phpunit": "^6.5.14"
     },
     "conflict": {
         "sebastian/comparator": "<1.2.4"
