--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "screenshotfolder_id": ""
     },
     "require": {
-        "chameleon-system/chameleon-base": "dev-feature/668-php8-compatibility as 7.1.0",
+        "chameleon-system/chameleon-base": "~7.1.0",
         "simplepie/simplepie": "~1.3"
     },
     "require-dev": {
