--- a/src/AmazonPaymentBundle/Tests/config.yml
+++ b/src/AmazonPaymentBundle/Tests/config.yml
@@ -7,6 +7,7 @@ services:
     public: false
 
   testpdo:
+    public: true
     class: PDO
     arguments: ["mysql:dbname=champhpunit;host=localhost;charset=utf8","champhpunit", "champhpunit", {"constant:\\PDO::MYSQL_ATTR_INIT_COMMAND":"SET NAMES utf8"}]
     calls:
