ref #771: Solve 7.1.x specific static code analysis issues

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "chameleon-system/sanitycheck-bundle": "~7.1.0",
         "phpspec/prophecy-phpunit": "^2.0.0",
         "phpunit/phpunit": "^9.5.1",
-        "vimeo/psalm": "^4.22"
+        "vimeo/psalm": "^4.22",
+        "psalm/plugin-symfony": "^3.1"
     },
     "conflict": {
         "sebastian/comparator": "<1.2.4"
