--- a/composer.json
+++ b/composer.json
@@ -131,5 +131,8 @@
         "chameleon-system/pkgshopratingservice": "*",
         "chameleon-system/pkgshopwishlist": "*",
         "chameleon-system/pkgtshoppaymenthandlersofortueberweisung": "*"
+    },
+    "scripts": {
+        "analyze": "psalm --no-cache"
     }
 }
