--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         "screenshotfolder_id": ""
     },
     "require": {
-        "chameleon-system/chameleon-base": "~7.1.0",
+        "chameleon-system/chameleon-base": "dev-master@dev",
         "simplepie/simplepie": "~1.3"
     },
     "require-dev": {
         "chameleon-system/code-style-config": "dev-master@dev",
-        "chameleon-system/sanitycheck": "~7.1.0",
-        "chameleon-system/sanitycheck-bundle": "~7.1.0",
+        "chameleon-system/sanitycheck": "dev-master@dev",
+        "chameleon-system/sanitycheck-bundle": "dev-master@dev",
         "phpspec/prophecy-phpunit": "^2.0.0",
         "phpunit/phpunit": "^9.5.1",
         "vimeo/psalm": "^4.22",
