--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - 'master'
-      - '[0-9]+.[0-9]+.x'
-      - '770-github-actions'
-    tags: [ '*' ]
   pull_request:
     types: [ opened, synchronize, reopened ]
 
@@ -16,12 +13,12 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-version: [ '7.1', '7.2', '7.3', '7.4' ]
+        php-version: [ '8.1' ]
     env:
       # Branch / Tag of chameleon-system/chameleon-system and chameleon-system/chameleon-resources
       # that will be used to setup this project
-      CHAMELEON_SYSTEM_REF: '7.0.x'
-      CHAMELEON_RESOURCES_REF: '7.0.x'
+      CHAMELEON_SYSTEM_REF: 'master'
+      CHAMELEON_RESOURCES_REF: 'master'
 
     services:
       mysql:
