ref #64110 adjusted missing ext-pdo to composer.json adjusted code to handle exceptions

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     },
     "require": {
         "ext-json": "*",
+        "ext-pdo": "*",
         "chameleon-system/chameleon-base": "~7.1.0",
         "simplepie/simplepie": "~1.3"
     },
