ref #63867 adjusting gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,2 +1,6 @@
-stages:
-  - test
+include:
+  - project: 'devops/gitlab-ci'
+    ref: 'main'
+    file:
+      - 'index.yaml'
+      - 'google-chat-notifications.yaml'
