#65287: remove stats from cms as module and add stas bundle to shop core

--- a/composer.json
+++ b/composer.json
@@ -101,7 +101,8 @@
             "src/ShopRatingServiceBundle/mappers",
             "src/ShopRatingServiceBundle/objects",
             "src/ShopWishlistBundle/objects",
-            "src/ShopWishlistBundle/pkgExtranet"
+            "src/ShopWishlistBundle/pkgExtranet",
+            ""
         ],
         "psr-4": {
             "ChameleonSystem\\": "src"
