#65287: remove empty composer item

--- a/composer.json
+++ b/composer.json
@@ -101,8 +101,7 @@
             "src/ShopRatingServiceBundle/mappers",
             "src/ShopRatingServiceBundle/objects",
             "src/ShopWishlistBundle/objects",
-            "src/ShopWishlistBundle/pkgExtranet",
-            ""
+            "src/ShopWishlistBundle/pkgExtranet"
         ],
         "psr-4": {
             "ChameleonSystem\\": "src"
