--- a/src/EcommerceStatsBundle/composer.json
+++ b/src/EcommerceStatsBundle/composer.json
@@ -4,19 +4,12 @@
   "description": "Extensible bundle for displaying statistics",
 
   "require": {
-    "php": "^7.4|^8.0",
     "ext-json": "*",
-
-    "chameleon-system/chameleon-base": "~7.1.0",
-    "chameleon-system/chameleon-shop": "~7.1.0",
-    "thecodingmachine/safe": "^1.3",
-    "phpat/phpat": "^0.9.0"
   },
 
   "require-dev": {
     "phpunit/phpunit": "^7.0",
-    "phpstan/phpstan": "^0.12.80",
-    "thecodingmachine/phpstan-safe-rule": "^1.0"
+    "phpstan/phpstan": "^0.12.80"
   },
 
   "autoload-dev": {
