--- a/src/EcommerceStatsBundle/Resources/config/routing.yml
+++ b/src/EcommerceStatsBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ chameleon_system_ecommerce_stats.export_csv.stats:
 chameleon_system_ecommerce_stats.export_csv.topsellers:
   path: /cms/chameleon_system_ecommerce_stats/topsellers.csv
   defaults: { _controller: chameleon_system_ecommerce_stats.controller.csv_export::exportTopsellers }
+
+chameleon_system_ecommerce_stats.widget.api:
+  path: /cms/chameleon_system_ecommerce_stats/widget/api/{widgetServicdeId}/{methodName}
+  defaults: { _controller: chameleon_system_ecommerce_stats.controllers.widget_controller::callWidgetMethod }
