ref #65182: fix widget controller

--- a/src/EcommerceStatsBundle/Resources/config/routing.yml
+++ b/src/EcommerceStatsBundle/Resources/config/routing.yml
@@ -7,5 +7,5 @@ chameleon_system_ecommerce_stats.export_csv.topsellers:
   defaults: { _controller: chameleon_system_ecommerce_stats.controller.csv_export::exportTopsellers }
 
 chameleon_system_ecommerce_stats.widget.api:
-  path: /cms/chameleon_system_ecommerce_stats/widget/api/{widgetServicdeId}/{methodName}
+  path: /cms/chameleon_system_ecommerce_stats/widget/api/{widgetServiceId}/{methodName}
   defaults: { _controller: chameleon_system_ecommerce_stats.controllers.widget_controller::callWidgetMethod }
