ref #64588: fix wrong comma in composer.json file

--- a/composer.json
+++ b/composer.json
@@ -130,7 +130,7 @@
         "chameleon-system/pkgshopprimarynavigation": "*",
         "chameleon-system/pkgshopproductexport": "*",
         "chameleon-system/pkgshopratingservice": "*",
-        "chameleon-system/pkgshopwishlist": "*",
+        "chameleon-system/pkgshopwishlist": "*"
     },
     "scripts": {
         "analyze": "psalm --no-cache"
