--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require": {
         "ext-json": "*",
         "ext-pdo": "*",
-        "chameleon-system/chameleon-base": "dev-master",
+        "chameleon-system/chameleon-base": "~8.0.0",
         "simplepie/simplepie": "~1.3"
     },
     "require-dev": {
